Fix side bar style & visibility

--- a/shadow_app/src/App.css
+++ b/shadow_app/src/App.css
@@ -105,3 +105,8 @@ label {
 .ant-select-clear {
     visibility: hidden;
 }
+
+.ender-col {
+    display: flex;
+    justify-content: end;
+}
